Added environment and kicked off GridSearchCV for SVM-poly

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0a431f97",
    "metadata": {},
    "outputs": [],
@@ -50,22 +50,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "6f063a7c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'seaborn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msns\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtime\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pyplot \u001b[38;5;28;01mas\u001b[39;00m plt\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'seaborn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -111,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "94cf96ed",
    "metadata": {},
    "outputs": [
@@ -511,7 +499,7 @@
        "[16124 rows x 50 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "19bdf05d",
    "metadata": {},
    "outputs": [],
@@ -613,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7b1d350e",
    "metadata": {},
    "outputs": [],
@@ -632,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0788f56d",
    "metadata": {},
    "outputs": [
@@ -2296,14 +2284,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 60 candidates, totalling 300 fits\n"
+      "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n",
+      "[CV 1/5; 1/20] START regression__C=0.1, regression__gamma=0.1, regression__kernel=poly\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/lib/python3.12/site-packages/sklearn/model_selection/_split.py:776: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
+      "/opt/anaconda3/envs/predict_plays/lib/python3.13/site-packages/sklearn/model_selection/_split.py:811: UserWarning: The least populated class in y has only 3 members, which is less than n_splits=5.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -2316,7 +2305,7 @@
     "parameters_to_try = {\n",
     "    'regression__C': [0.1, 1, 10, 100, 1000], \n",
     "\t'regression__gamma': [0.1, 1, 10, 100], # 1, 0.1, 0.01, 0.001, 0.0001\n",
-    "\t'regression__kernel': ['rbf', 'poly', 'linear']\n",
+    "\t'regression__kernel': ['poly']\n",
     "}\n",
     "\n",
     "# scoring on HalvingGridSearchCV is failing due to wild\n",
@@ -2331,7 +2320,7 @@
     "                            param_grid = parameters_to_try, \n",
     "                            scoring = \"accuracy\",\n",
     "                            cv = 5,\n",
-    "                            verbose=1)\n",
+    "                            verbose=99)\n",
     "model_finder.fit(X_train, y_train)\n",
     "model_finder.best_estimator_\n",
     "\n",
@@ -2454,7 +2443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "c35498d5",
    "metadata": {},
    "outputs": [
@@ -2462,7 +2451,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| DecisionTreeClassifier with max_depth=5 | 11 | 0.0491 secs | 0.726897 | 0.738283 |\n"
+      "| DecisionTreeClassifier with max_depth=5 | 11 | 0.0423 secs | 0.726897 | 0.738283 |\n"
      ]
     }
    ],
@@ -2484,7 +2473,19 @@
    "execution_count": null,
    "id": "294235c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'graphviz'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# # get cleaned up feature names\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# feature_names = []\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# feature_names += TRAINING_FEATURES\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m \u001b[38;5;66;03m#                    filled=True)\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# plt.suptitle(\"Decision Tree Classifier\")\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgraphviz\u001b[39;00m\n\u001b[32m     17\u001b[39m dot_data = tree.export_graphviz(decision_tree_model, out_file=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m     18\u001b[39m feature_names=[\u001b[33m\"\u001b[39m\u001b[33mpetal_length\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mpetal_width\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m     19\u001b[39m class_names=[\u001b[33m\"\u001b[39m\u001b[33msetosa\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mversicolor\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mvirginica\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m     20\u001b[39m filled=\u001b[38;5;28;01mTrue\u001b[39;00m, rounded=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     21\u001b[39m graph = graphviz.Source(dot_data)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'graphviz'"
+     ]
+    }
+   ],
    "source": [
     "# get cleaned up feature names\n",
     "feature_names = []\n",
@@ -2494,7 +2495,7 @@
     "\n",
     "feature_names = [x.replace('ordinalencoder__', '_').replace('onehotencoder__', '_').replace('remainder__', '_') for x in feature_names]\n",
     "\n",
-    "fig = plt.figure(figsize=(10,10))\n",
+    "fig = plt.figure(figsize=(40,40))\n",
     "_ = tree.plot_tree(decision_tree,\n",
     "                   feature_names=feature_names,\n",
     "                   filled=True)\n",
@@ -2506,7 +2507,7 @@
    "id": "4bfbec80",
    "metadata": {},
    "source": [
-    "## Support Vector Machines"
+    "### Support Vector Machines"
    ]
   },
   {
@@ -2582,9 +2583,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ml_anaconda]",
+   "display_name": "Python (predict_plays)",
    "language": "python",
-   "name": "conda-env-ml_anaconda-py"
+   "name": "predict_plays"
   },
   "language_info": {
    "codemirror_mode": {
