Adding chart and initial readme

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "19bdf05d",
    "metadata": {},
    "outputs": [],
@@ -663,6 +663,7 @@
     "                                       p.preSnapHomeTeamWinProbability if p.possessionTeam == p.homeTeamAbbr else\n",
     "                                       p.preSnapVisitorTeamWinProbability, axis = 1)\n",
     "\n",
+    "# come back to this - the logic is a bit recursive here\n",
     "# plays['high_liklihood_pass'] = plays.apply(lambda p: \n",
     "#                                             True if p.qbSpike == True else\n",
     "#                                             False if p.qbKneel == True else\n",
@@ -682,12 +683,6 @@
     "plays['is_inside_two_mins'] = tmp['is_inside_two_mins']\n",
     "plays['is_overtime'] = tmp['is_overtime']\n",
     "\n",
-    "# # preSnapHomeScore, preSnapVisitorScore, need Home/Away \n",
-    "# plays['off_score_lead'] = plays.apply(...)\n",
-    "\n",
-    "# # preSnapHomeTeamWinProbability\tpreSnapVisitorTeamWinProbability, need Home/Away \n",
-    "# plays['off_win_probability'] = plays.apply(...)\n",
-    "\n",
     "plays['off_yards_to_goal'] = plays.apply(lambda p: 100 - int(p.yardlineNumber) if p.yardlineSide == p.possessionTeam else int(p.yardlineNumber), axis = 1)\n",
     "df = plays"
    ]
@@ -702,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7b1d350e",
    "metadata": {},
    "outputs": [
@@ -1088,15 +1083,15 @@
     "df = pd.concat([df, quarter_dummies], axis=1)\n",
     "down_dummies = pd.get_dummies(df.down, prefix='down')\n",
     "df = pd.concat([df, down_dummies], axis=1)\n",
-    "# teams_dummies = pd.get_dummies(df.possessionTeam, prefix='team')\n",
+    "# teams_dummies = pd.get_dummies(df.possessionTeam, prefix='team')                              # not using team dummies at the moment\n",
     "# df = pd.concat([df, teams_dummies], axis=1)\n",
     "\n",
     "TARGET_FEATURE = 'play_result'\n",
     "TRAINING_FEATURES = ['yardsToGo',                                                               # down and distance\n",
-    "                    #  'quarter', 'is_overtime', 'down',                                        # covered by dummies\n",
+    "                     #'quarter', 'is_overtime', 'down',                                         # covered by dummies\n",
     "                     'secs_remaining', 'is_inside_two_mins',                                    # game time\n",
     "                     'wr_count', 'te_count', 'rb_count', 'extra_ol',                            # formations\n",
-    "                    #  'possessionTeam',                                                        # including team\n",
+    "                     #'possessionTeam',                                                         # including team\n",
     "                     'score_offset', 'win_probability',                                         # score and win probability\n",
     "                     TARGET_FEATURE]\n",
     "for c in formation_dummies.columns:\n",
@@ -1108,10 +1103,6 @@
     "# for c in teams_dummies.columns:\n",
     "#     TRAINING_FEATURES.append(c)\n",
     "\n",
-    "# set transformer of remaining categorical features\n",
-    "# col_trans = make_column_transformer(\n",
-    "#     (OneHotEncoder(drop = 'if_binary'), ['possessionTeam']),\n",
-    "#     remainder='passthrough')\n",
     "df[TRAINING_FEATURES]"
    ]
   },
@@ -1716,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "24a94a3d",
    "metadata": {},
    "outputs": [
