Beefing up readme

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "0a431f97",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,7 @@
     "\n",
     "# training data paramters\n",
     "TRAINING_PERCENT_PARAMETER = 0.15 #if IS_TRAINING_MODE else 0.015\n",
+    "DATA_PATH = '../data/big_data_bowl_2025'\n",
     "\n",
     "# Development Parameters\n",
     "DEBUG_PARAMETER = True\n",
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "94cf96ed",
    "metadata": {},
    "outputs": [
@@ -343,21 +344,21 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "plays_path = '/Users/davidstange/Development/github/davestange/data/big_data_bowl_2025/plays.csv'\n",
+    "plays_path = f'{DATA_PATH}/plays.csv'\n",
     "plays = pd.read_csv(plays_path)\n",
     "\n",
-    "plays.head()\n"
+    "plays.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ec4f00f9",
    "metadata": {},
    "outputs": [
@@ -583,7 +584,7 @@
     }
    ],
    "source": [
-    "games_path = '/Users/davidstange/Development/github/davestange/data/big_data_bowl_2025/games.csv'\n",
+    "games_path = f'{DATA_PATH}/games.csv'\n",
     "games = pd.read_csv(games_path)\n",
     "\n",
     "plays = plays.merge(games[['gameId', 'homeTeamAbbr', 'visitorTeamAbbr']], left_on='gameId', right_on='gameId')\n",
