adding team considerations

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -6621,7 +6621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 62,
    "id": "3dd4e485",
    "metadata": {},
    "outputs": [],
@@ -6644,10 +6644,10 @@
     "    \n",
     "    show_table = False\n",
     "    if show_table:\n",
-    "        print(\"| Model | lr | kn | dt | sv | rf | gb |\")\n",
-    "        print(\"| ----- | -- | -- | -- | -- | -- | -- |\")\n",
+    "        print(\"| Model | lr | kn | dt | sv | rf | gb | best |\")\n",
+    "        print(\"| ----- | -- | -- | -- | -- | -- | -- | -- |\")\n",
     "    else:\n",
-    "        print(\"Model\\t\\tlr\\tkn\\tdt\\tsv\\trf\\tgb\")\n",
+    "        print(\"Model\\t\\tlr\\tkn\\tdt\\tsv\\trf\\tgb\\tbest\")\n",
     "\n",
     "    # when no features, we're just checking\n",
     "    features = [item for item in df.columns if item.startswith(type_prefix)]\n",
@@ -6668,14 +6668,24 @@
     "        print(row)\n",
     "        print(f\"The best model is {model_prefixes[best_name]} with an accuracy of {best_acc:.2f}\")\n",
     "    else:\n",
+    "        best_score = 0.0\n",
+    "        best_model = \"\"\n",
     "        for feature in features:\n",
     "            pretty_feature = feature.replace(f\"{type_prefix}_\", \"\")\n",
-    "            row = f\"| {pretty_feature} | \" if show_table else f\"{feature}\\t\"\n",
+    "            row = f\"| {pretty_feature} | \" if show_table else f\"{feature.ljust(15)}\\t\"\n",
+    "            best = 0.0\n",
     "            for m in model_prefixes:\n",
     "                model_accuracy = f\"{m}_acc\"\n",
     "                mean_acc = df[df[feature] == 1][model_accuracy].mean()\n",
+    "                if mean_acc > best_score:\n",
+    "                    best_score = mean_acc\n",
+    "                    best_model = f\"Model {m} had the highest accuracy of {mean_acc:.4f} with {pretty_feature}\"\n",
+    "                if mean_acc > best:\n",
+    "                    best = mean_acc\n",
     "                row += f\" {mean_acc:.2f} |\" if show_table else f\"{mean_acc:.2f}\\t\"\n",
+    "            row += f\" {best:.4f} |\" if show_table else f\"{best:.4f}\\t\"\n",
     "            print(row)\n",
+    "        print(best_model)\n",
     "    print(\"\")\n",
     "\n",
     "def print_scenarios():\n",
@@ -6705,7 +6715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 63,
    "id": "f9ede356",
    "metadata": {},
    "outputs": [
@@ -6713,22 +6723,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model\t\tlr\tkn\tdt\tsv\trf\tgb\n",
-      "form_EMPTY\t0.97\t0.97\t0.97\t0.95\t0.95\t0.97\t\n",
-      "form_I_FORM\t0.71\t0.71\t0.71\t0.70\t0.60\t0.72\t\n",
-      "form_JUMBO\t0.84\t0.84\t0.84\t0.81\t0.73\t0.81\t\n",
-      "form_MUDDLE\t0.00\t0.00\t1.00\t0.48\t0.71\t0.52\t\n",
-      "form_PISTOL\t0.65\t0.65\t0.65\t0.68\t0.57\t0.71\t\n",
-      "form_SHOTGUN\t0.75\t0.75\t0.75\t0.73\t0.71\t0.75\t\n",
-      "form_SINGLEBACK\t0.67\t0.67\t0.67\t0.66\t0.59\t0.66\t\n",
-      "form_VICTORY\t1.00\t1.00\t1.00\t0.97\t0.92\t1.00\t\n",
-      "form_WILDCAT\t0.85\t0.85\t0.69\t0.86\t0.74\t0.78\t\n",
+      "Model\t\tlr\tkn\tdt\tsv\trf\tgb\tbest\n",
+      "form_EMPTY     \t0.97\t0.97\t0.97\t0.95\t0.95\t0.97\t0.9665\t\n",
+      "form_I_FORM    \t0.71\t0.71\t0.71\t0.70\t0.60\t0.72\t0.7161\t\n",
+      "form_JUMBO     \t0.84\t0.84\t0.84\t0.81\t0.73\t0.81\t0.8426\t\n",
+      "form_MUDDLE    \t0.00\t0.00\t1.00\t0.48\t0.71\t0.52\t1.0000\t\n",
+      "form_PISTOL    \t0.65\t0.65\t0.65\t0.68\t0.57\t0.71\t0.7067\t\n",
+      "form_SHOTGUN   \t0.75\t0.75\t0.75\t0.73\t0.71\t0.75\t0.7528\t\n",
+      "form_SINGLEBACK\t0.67\t0.67\t0.67\t0.66\t0.59\t0.66\t0.6658\t\n",
+      "form_VICTORY   \t1.00\t1.00\t1.00\t0.97\t0.92\t1.00\t1.0000\t\n",
+      "form_WILDCAT   \t0.85\t0.85\t0.69\t0.86\t0.74\t0.78\t0.8649\t\n",
+      "Model dt had the highest accuracy of 1.0000 with MUDDLE\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "calculate_combined_accuracy(X_test, 'form')"
    ]
   },
@@ -6742,7 +6752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 64,
    "id": "22cbe038",
    "metadata": {},
    "outputs": [
@@ -6750,39 +6760,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model\t\tlr\tkn\tdt\tsv\trf\tgb\n",
-      "team_ARI\t0.74\t0.74\t0.74\t0.73\t0.70\t0.76\t\n",
-      "team_ATL\t0.78\t0.78\t0.78\t0.78\t0.67\t0.80\t\n",
-      "team_BAL\t0.72\t0.71\t0.71\t0.71\t0.69\t0.73\t\n",
-      "team_BUF\t0.70\t0.73\t0.73\t0.71\t0.64\t0.74\t\n",
-      "team_CAR\t0.70\t0.70\t0.70\t0.62\t0.67\t0.70\t\n",
-      "team_CHI\t0.69\t0.68\t0.68\t0.67\t0.64\t0.66\t\n",
-      "team_CIN\t0.82\t0.82\t0.82\t0.78\t0.72\t0.82\t\n",
-      "team_CLE\t0.75\t0.75\t0.75\t0.74\t0.71\t0.74\t\n",
-      "team_DAL\t0.74\t0.74\t0.75\t0.75\t0.71\t0.73\t\n",
-      "team_DEN\t0.74\t0.75\t0.75\t0.72\t0.70\t0.76\t\n",
-      "team_DET\t0.76\t0.76\t0.76\t0.75\t0.65\t0.75\t\n",
-      "team_GB\t0.67\t0.67\t0.67\t0.67\t0.67\t0.69\t\n",
-      "team_HOU\t0.70\t0.71\t0.71\t0.67\t0.65\t0.71\t\n",
-      "team_IND\t0.75\t0.75\t0.75\t0.74\t0.70\t0.74\t\n",
-      "team_JAX\t0.70\t0.68\t0.68\t0.70\t0.64\t0.69\t\n",
-      "team_KC\t0.76\t0.76\t0.76\t0.75\t0.72\t0.76\t\n",
-      "team_LA\t0.73\t0.74\t0.74\t0.73\t0.70\t0.73\t\n",
-      "team_LAC\t0.77\t0.77\t0.77\t0.74\t0.71\t0.78\t\n",
-      "team_LV\t0.77\t0.77\t0.77\t0.76\t0.73\t0.79\t\n",
-      "team_MIA\t0.72\t0.73\t0.73\t0.71\t0.68\t0.75\t\n",
-      "team_MIN\t0.73\t0.73\t0.73\t0.72\t0.66\t0.73\t\n",
-      "team_NE\t0.76\t0.76\t0.76\t0.71\t0.71\t0.76\t\n",
-      "team_NO\t0.82\t0.81\t0.81\t0.80\t0.73\t0.82\t\n",
-      "team_NYG\t0.70\t0.70\t0.69\t0.68\t0.68\t0.71\t\n",
-      "team_NYJ\t0.74\t0.74\t0.74\t0.73\t0.71\t0.74\t\n",
-      "team_PHI\t0.69\t0.68\t0.68\t0.70\t0.65\t0.68\t\n",
-      "team_PIT\t0.74\t0.74\t0.74\t0.71\t0.70\t0.73\t\n",
-      "team_SEA\t0.70\t0.70\t0.70\t0.70\t0.66\t0.73\t\n",
-      "team_SF\t0.79\t0.80\t0.80\t0.79\t0.72\t0.80\t\n",
-      "team_TB\t0.82\t0.82\t0.82\t0.81\t0.74\t0.83\t\n",
-      "team_TEN\t0.76\t0.76\t0.76\t0.74\t0.68\t0.75\t\n",
-      "team_WAS\t0.76\t0.74\t0.74\t0.74\t0.74\t0.75\t\n",
+      "Model\t\tlr\tkn\tdt\tsv\trf\tgb\tbest\n",
+      "team_ARI       \t0.74\t0.74\t0.74\t0.73\t0.70\t0.76\t0.7556\t\n",
+      "team_ATL       \t0.78\t0.78\t0.78\t0.78\t0.67\t0.80\t0.8000\t\n",
+      "team_BAL       \t0.72\t0.71\t0.71\t0.71\t0.69\t0.73\t0.7313\t\n",
+      "team_BUF       \t0.70\t0.73\t0.73\t0.71\t0.64\t0.74\t0.7449\t\n",
+      "team_CAR       \t0.70\t0.70\t0.70\t0.62\t0.67\t0.70\t0.7041\t\n",
+      "team_CHI       \t0.69\t0.68\t0.68\t0.67\t0.64\t0.66\t0.6888\t\n",
+      "team_CIN       \t0.82\t0.82\t0.82\t0.78\t0.72\t0.82\t0.8195\t\n",
+      "team_CLE       \t0.75\t0.75\t0.75\t0.74\t0.71\t0.74\t0.7547\t\n",
+      "team_DAL       \t0.74\t0.74\t0.75\t0.75\t0.71\t0.73\t0.7481\t\n",
+      "team_DEN       \t0.74\t0.75\t0.75\t0.72\t0.70\t0.76\t0.7599\t\n",
+      "team_DET       \t0.76\t0.76\t0.76\t0.75\t0.65\t0.75\t0.7617\t\n",
+      "team_GB        \t0.67\t0.67\t0.67\t0.67\t0.67\t0.69\t0.6898\t\n",
+      "team_HOU       \t0.70\t0.71\t0.71\t0.67\t0.65\t0.71\t0.7131\t\n",
+      "team_IND       \t0.75\t0.75\t0.75\t0.74\t0.70\t0.74\t0.7520\t\n",
+      "team_JAX       \t0.70\t0.68\t0.68\t0.70\t0.64\t0.69\t0.6998\t\n",
+      "team_KC        \t0.76\t0.76\t0.76\t0.75\t0.72\t0.76\t0.7608\t\n",
+      "team_LA        \t0.73\t0.74\t0.74\t0.73\t0.70\t0.73\t0.7355\t\n",
+      "team_LAC       \t0.77\t0.77\t0.77\t0.74\t0.71\t0.78\t0.7807\t\n",
+      "team_LV        \t0.77\t0.77\t0.77\t0.76\t0.73\t0.79\t0.7897\t\n",
+      "team_MIA       \t0.72\t0.73\t0.73\t0.71\t0.68\t0.75\t0.7489\t\n",
+      "team_MIN       \t0.73\t0.73\t0.73\t0.72\t0.66\t0.73\t0.7324\t\n",
+      "team_NE        \t0.76\t0.76\t0.76\t0.71\t0.71\t0.76\t0.7637\t\n",
+      "team_NO        \t0.82\t0.81\t0.81\t0.80\t0.73\t0.82\t0.8188\t\n",
+      "team_NYG       \t0.70\t0.70\t0.69\t0.68\t0.68\t0.71\t0.7065\t\n",
+      "team_NYJ       \t0.74\t0.74\t0.74\t0.73\t0.71\t0.74\t0.7436\t\n",
+      "team_PHI       \t0.69\t0.68\t0.68\t0.70\t0.65\t0.68\t0.7009\t\n",
+      "team_PIT       \t0.74\t0.74\t0.74\t0.71\t0.70\t0.73\t0.7424\t\n",
+      "team_SEA       \t0.70\t0.70\t0.70\t0.70\t0.66\t0.73\t0.7313\t\n",
+      "team_SF        \t0.79\t0.80\t0.80\t0.79\t0.72\t0.80\t0.8005\t\n",
+      "team_TB        \t0.82\t0.82\t0.82\t0.81\t0.74\t0.83\t0.8323\t\n",
+      "team_TEN       \t0.76\t0.76\t0.76\t0.74\t0.68\t0.75\t0.7611\t\n",
+      "team_WAS       \t0.76\t0.74\t0.74\t0.74\t0.74\t0.75\t0.7588\t\n",
+      "Model gb had the highest accuracy of 0.8323 with TB\n",
       "\n"
      ]
     }
@@ -7121,7 +7132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "51f64064",
    "metadata": {},
    "outputs": [
@@ -7226,6 +7237,9 @@
     "# how_many(\"Singleback Formation\", df[df.form_SINGLEBACK])\n",
     "# how_many(\"Victory Formation\", df[df.form_VICTORY])\n",
     "# how_many(\"Wildcat Formation\", df[df.form_WILDCAT])\n",
+    "\n",
+    "how_many(x[(x.form_PISTOL)], \"Pistol\")\n",
+    "\n",
     "\n",
     "x = df\n",
     "print(f\"{'Situation'.ljust(30)} times\\tpass\\trun\")\n",
